Updated page-title due to contrast issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -44,10 +44,16 @@ body {
 }
 
 .page-title {
-    color: var(--headline-color-on-white);
-    -webkit-text-stroke-width: 1.5px;
-    -webkit-text-stroke-color: var(--accent2-color);
-    text-shadow: 0 0 50px black;
+    color: white;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: var(--headline-color-on-white);
+    background-color: black;
+    text-shadow: 0 0 50px rgba(255, 255, 255, 0.5);
+    padding: 5px 50px;
+    border-radius: 10px;
+    box-shadow: 0 0 50px white;
+    border: 5px solid var(--accent1-color);
+    box-shadow: 0px 0px 50px rgba(255, 255, 255, 0.2); 
 }
 
 h1, h2, h3, h5, h6 {
